[package]
name = "baresifter-analyze"
version = "0.1.0"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
nom = "6.1.2"
iced-x86 = "1.11.0"
anyhow = "1.0.40"
